fixed: moderation tab is misaligned

--- a/askbot/skins/default/media/style/style.css
+++ b/askbot/skins/default/media/style/style.css
@@ -875,6 +875,7 @@ a:hover.medal {
     margin: 5px 0 0 4px;
     padding: 0 2px;
     text-decoration: none;
+    font-size: 12.5px;
 }
 
 .tabsA .label, .tabsC .label {
